Update Gradle definitions